testsuite/tests/th/T21547.stderr

T21547.hs:9:14: error:
    • GHC stage restriction:
        instance for ‘base-4.17.1.0:Data.Typeable.Internal.Typeable
                        T’ is used in a top-level splice, quasi-quote, or annotation,
        and must be imported, not defined locally
    • In the expression: foo [|| T () ||]
      In the Template Haskell splice $$(foo [|| T () ||])
      In the expression: $$(foo [|| T () ||])
